# tp

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  demo.tape
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: bench.sh  chart.py
completions/: tp.ts
docs/: tp_prd_techspec.docx
docs/book/: book.toml
docs/book/src/: SUMMARY.md  ai-features.md  architecture.md  benchmarks.md  configuration.md  contributing.md  installation.md  introduction.md  usage.md
docs/guide/: configuration.md  features.md  getting-started.md
docs/plans/: 2026-03-01-beta-completion-plan.md  2026-03-01-beta-features-design.md  2026-03-01-beta-features-plan.md  2026-03-01-polish-design.md  2026-03-01-polish-plan.md  2026-03-01-typo-tolerance-design.md
scripts/: gen-architecture.mjs  package-lock.json  package.json
src/: bootstrap.rs  cli.rs  import.rs  main.rs  style.rs
src/ai/: cache.rs  mod.rs  recall.rs
src/db/: mod.rs  schema.rs
src/nav/: frecency.rs  matching.rs  mod.rs  suggest.rs  waypoints.rs
src/project/: mod.rs
src/shell/: mod.rs
src/tui/: mod.rs  stats.rs
tests/: integration.rs
