[package]
name = "tp-nav"
version = "0.1.0"
edition = "2021"
description = "Teleport anywhere in your codebase — AI-enhanced, project-aware directory navigation"
license = "MIT"
repository = "https://github.com/pattynextdoor/tp"
homepage = "https://github.com/pattynextdoor/tp"
readme = "README.md"
keywords = ["cd", "navigation", "directory", "frecency", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
shellexpand = "3"
anyhow = "1"
strsim = "0.11"
thiserror = "1"
libc = "0.2"

# Feature-gated
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["tui", "ai"]
tui = ["dep:ratatui", "dep:crossterm"]
ai = ["dep:reqwest"]
